--- a/src/client/public/css/style.less
+++ b/src/client/public/css/style.less
@@ -1,7 +1,5 @@
-body {
-  background-color: blue;
-}
-
-.test {
-  color: white;
+.nav {
+  width: 100%;
+  height: 100px;
+  background-color: black;
 }
